EWL-XXX: Fixing hub card on IE to do not affect on hub card with no image.

--- a/styleguide/source/assets/scss/02-molecules/hub/_hub-card.scss
+++ b/styleguide/source/assets/scss/02-molecules/hub/_hub-card.scss
@@ -8,10 +8,15 @@
   text-decoration: none;
   min-height: 400px;
   width: 100%;
-
+  
   @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) { 
     display: block;
+
+    &--no-image {
+      display: flex;
+    }
   }
+  
 
   &__heading,
   & .ama__h2 {
